<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE
    resources [
        <!ENTITY nbsp "&#160;"> <!-- non-breaking space, U+00A0 -->
    ]>
<resources>
    <string name="app_name">ICE-V3</string>
    <string name="manager_name">МенеджерNN</string>
    <string name="manager_code_title">Код менеджера</string>
    <string name="manager_code_summary">Код менеджера (сотрудника) в 1С</string>
    <string name="manager_code_pref_key">manager_code_pref_key</string>
    <string name="add_order">Добавить заявку</string>
    <string name="update_data">Обновить данные</string>
    <string name="refresh_list">Обновить</string>
    <string name="return_today">Сегодня</string>
    <string name="settings">Настройки</string>
    <string name="pref_user_1c_sum">Имя пользователя в 1С</string>
    <string name="pref_user_1c_title">Пользователь 1С</string>
    <string name="pref_default_storehouse_summ">Код склада по умолчанию</string>
    <string name="pref_default_storehouse_title">Код склада</string>
    <string name="pref_order_days_ahead_summ">На сколько дней вперед можно резервировать заявки</string>
    <string name="pref_order_days_ahead_title">Ограничение даты заявок</string>
    <string name="pref_order_log_depth_summ">Глубина журнала для просмотра прошлых заявок в днях</string>
    <string name="pref_order_log_depth_title">Глубина журнала заявок</string>
    <string name="pref_notif_enable_summ">Включить уведомления (иначе кратковременное всплывающее сообщение)</string>
    <string name="pref_notif_enable_title">Включить уведомления</string>
    <string name="pref_screen_sys_options_title">Системные настройки</string>
    <string name="pref_screen_sys_options_summ">Нужно изменять только при изменениях на сервере</string>
    <string name="pref_exchange_frequency_title">Интервал обновления данных</string>
    <string name="pref_exchange_frequency_summ">Интервал в секундах</string>
    <string name="pref_exchange_shutdown_on_exit_title">Останавливать сервис обновлений</string>
    <string name="pref_exchange_shutdown_on_exit">Останавливать сервис обмена данными</string>
    <string name="pref_apk_update_url_title">Путь к обновленному приложению</string>
    <string name="pref_apk_update_url_summ">Ссылка на обновленный apk-файл приложения</string>
    <string name="pref_cat_DB_options_title">Настройки подключения к удаленной БД</string>
    <string name="pref_cat_DB_options_summ">Настройки подключения к удаленной БД на сервере заявок</string>
    <string name="pref_db_host_title">Хост (IP или Host)</string>
    <string name="pref_db_port_title">Порт</string>
    <string name="pref_db_name_title">База данных</string>
    <string name="pref_db_username_title">Пользователь БД</string>
    <string name="pref_db_username_summ">Имя пользователя для доступа к БД</string>
    <string name="pref_db_password_title">Пароль пользователя БД</string>
    <string name="pref_instanceDB_title">Именованный экземпляр сервера</string>
    <string name="pref_gps_tracking_title">Настройки GPS логгирования</string>
    <string name="pref_gps_type_title">Тип опроса местоположения</string>
    <string name="pref_location_tracking_shutdown_on_exit">Останавливать сервис GPS логгирования</string>
    <string name="pref_on_exit">При выходе из программы</string>
    <string-array name="adv_types_strings">
        <item>Обычная РА</item>
        <item>Perfect Store</item>
        <item>Новый объект</item>
        <item>Замена брака</item>
        <item>Проект №1</item>
    </string-array>
    <string-array name="order_types">
        <item>ПРОДАЖА</item>
        <item>ВОЗВРАТ</item>
        <item>ПРЕДЗАКАЗ</item>
    </string-array>
    <string-array name="order_statuses">
        <item>Записана</item>
        <item>Отправлена</item>
        <item>Получен ответ</item>
    </string-array>
    <string-array name="location_tracking_type_names">
        <item>Слежение за местоположением</item>
        <item>Запрос текущего местоположения</item>
    </string-array>
    <string-array name="location_tracking_type_values">
        <item>always</item>
        <item>periodically</item>
    </string-array>
    <string-array name="location_tracking_providers_names">
        <item>Датчик GPS телефона</item>
        <item>Данные сетей GSM</item>
        <item>Пассивный режим</item>
    </string-array>
    <string name="location_tracking_providers_title">Используемые поставщики местоположения</string>
    <string-array name="location_tracking_providers_values">
        <item>gps</item>
        <item>network</item>
        <item>passive</item>
    </string-array>
    <string name="location_tracking_providers_default">gps</string>
    <string name="notif_error_updating">Ошибка обновления данных</string>
    <string name="notif_update_data_title">Обновление данных</string>
    <string name="notif_update_data_complete_title">Обновление завершено</string>
    <string name="notif_error_orders_title">Обновление заявок</string>
    <string name="notif_error_orders_updating">Ошибка отправки/проверки заявок</string>
    <string name="notif_update_data_message">Обновляются %1$s</string>
    <string name="notif_update_data_complete">Обновление %1$s завершено</string>

    <string name="notif_data_products">остатки</string>
    <string name="notif_data_contragents">контрагенты</string>
    <string name="notif_data_debts">задолженности контрагентов</string>
    <string name="notif_data_orders">заявки</string>
    <string name="notif_data_answers">ответы на заявки</string>

    <string name="notif_data_products_complete">остатков</string>
    <string name="notif_data_contragents_complete">контрагентов</string>
    <string name="notif_data_debts_complete">задолженностей контрагентов</string>
    <string name="notif_data_orders_complete">заявок</string>
    <string name="notif_data_answers_complete">ответов на заявки</string>

    <string name="notif_request_success_title">Заявка отправлена</string>
    <string name="notif_request_success_message">Заявка для %1$s отправлена</string>

    <string name="notif_response_title">Заявка %1$s обработана</string>
    <string name="notif_response_text">Заявка для %1$s : %2$s</string>

    <string name="error_disclaimer">Здесь отображаются ошибки приложения, для технических нужд.</string>

    <string name="progress_dialog_title">Обновление данных…</string>

    <string name="apk_file_not_found">Файл APK не найден!…</string>

    <string name="item_search_input_numeric">Поиск продукции по цифровому коду</string>
    <string name="item_search_input_numeric_summ">Значение по умолчанию</string>

    <string name="pref_user_1c_name_default">МенеджерNN</string>
    <string name="pref_storehouse_code_default">00279</string>
    <string name="pref_hostDB_default">212.98.187.177</string>
    <string name="pref_instanceDB_default">""</string>
    <string name="pref_portDB_default">41433</string>
    <string name="pref_nameDB_default">ingmanXchange</string>
    <string name="pref_userDB_default">androidXchange</string>
    <string name="pref_passDB_default">androidXchangeIngman759153!</string>
    <string name="pref_apk_update_url">http://ingman.by/agent/iceV3.apk</string>
    <string name="developer_name">"@sevenlis"</string>
    <string name="developer_mail">alexander.lisovski@foodunion.com</string>
    <string name="digit_123">123</string>
    <string name="select_contragent"><![CDATA[<Выберите контрагента>]]></string>
    <string name="select_salepoint"><![CDATA[<Выберите пункт разгрузки>]]></string>
    <string name="order_date">Дата заявки</string>
    <string name="contragent">Контрагент:</string>
    <string name="salepoint">Пункт разгрузки:</string>
    <string name="advertising">Реклама</string>
    <string name="status">Status</string>
    <string name="contragent_name">Наименование контрагента</string>
    <string name="salepoint_name">Наименование разгрузки</string>
    <string name="regular">Обычная</string>
    <string name="advertising_no">Реклама: НЕТ</string>
    <string name="dd_mm_yyyy">DD.MM.YYYY</string>
    <string name="uid_uid">uid</string>
    <string name="delivery_point_address">Пункт разгрузки</string>
    <string name="mass">Масса</string>
    <string name="packs_amount">Количество упаковок</string>
    <string name="sum">Сумма</string>
    <string name="amount">Количество единиц</string>
    <string name="isAdvertising">Реклама: null</string>
    <string name="adv_type">Тип рекламы</string>
    <string name="order_condition">Состояние заявки</string>
    <string name="comment">Комментарий</string>
    <string name="datetime">Дата время</string>
    <string name="title_activity_maps">Карта</string>
    <string name="show_location">Местоположение</string>
    <string name="map_follow_my_location">Показывать текущий пройденный путь&nbsp;&nbsp;&nbsp;</string>
    <string name="text_none">none</string>
    <string name="product_name">Наименование продукции</string>
    <string name="items_amount">Количество единиц</string>
    <string name="summa">Сумма</string>
    <string name="storehouse_label">Место хранения:</string>
    <string name="select_storehouse"><![CDATA[<Выберите место хранения>]]></string>
    <string name="agreement_label">Договор:</string>
    <string name="agreement">Договор</string>
    <string name="select_agreement"><![CDATA[<Выберите договор>]]></string>
    <string name="storehouse">Место хранения</string>
    <string name="resend_order">Отправить</string>
    <string name="copy_order">Копировать</string>
    <string name="edit_order">Изменить</string>
    <string name="increase">Увеличить</string>
    <string name="decrease">Уменьшить</string>
    <string name="code_search">Поиск по коду…</string>
    <string name="name_search">Поиск по наименованию…</string>
    <string name="preorders_journ">Журнал предзаказов</string>
    <string name="save_orders">Сохранить заявки</string>
    <string name="delete_orders">Удалить заявки</string>
    <string name="change_date_orders">Изменить дату заявок</string>
    <string name="by_ingman_sevenlis_ice_v3">by.ingman.sevenlis.ice_v3</string>
    <string name="ver_3_3_01">ver.3 (3.01)</string>
    <string name="copyrights">СООО "Ингман мороженое", 2016 – 2020 г.</string>
    <string name="xx_xx_xxxx">XX.XX.XXXX</string>
    <string name="orders_xxx">Заявок: XXX</string>
    <string name="points_xxx">Адресов: XXX</string>
    <string name="packs_xxx">Упаковок: XXX</string>
    <string name="total">Итого:</string>
    <string name="packs_count">Количество упаковок</string>
    <string name="items_count">Количество единиц</string>
    <string name="product_mass">Масса продукции</string>
    <string name="starred">Starred</string>
</resources>
