<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/add_order"
          android:id="@+id/add_order"
          android:icon="@android:drawable/ic_input_add"/>
    <item android:title="@string/settings"
          android:id="@+id/settings"
          app:title="@string/settings"/>
    <item android:title="@string/update_data"
          android:id="@+id/update_data"/>
    <group android:id="@+id/exchangeServiceMenuGroup">
        <item android:title="Остановить автообновление"
              android:id="@+id/stopExchangeData"/>
        <item android:title="Запустить автообновление"
              android:id="@+id/startExchangeData"/>
    </group>
    <item android:title="О приложении"
          android:id="@+id/about_app"/>
</menu>