<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_blue">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/group_date_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/xx_xx_xxxx"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/group_orders_count_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/orders_xxx"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="monospace" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="36dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/group_points_count_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/points_xxx"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/group_packs_count_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/packs_xxx"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="monospace" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_items_divider"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>